--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "bcrypt": "^1.0.3",
     "config": "^2.0.1",
     "express": "^4.16.4",
     "joi": "^14.0.6",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.3.12"
+    "mongoose": "^5.3.12",
+    "nodemailer": "^4.6.8",
+    "sendgrid": "^5.2.3"
   }
 }
